force-app/main/default/objects/ScanRuleConfiguration__mdt/ScanRuleConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Scan Rule Configuration</label>
    <pluralLabel>Scan Rule Configurations</pluralLabel>
    <description>Holds configuration for scanning rules</description>

    <fields>
        <fullName>RuleName__c</fullName>
        <label>Rule Name</label>
        <type>Text</type>
        <length>100</length>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expression__c</fullName>
        <label>Expression</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <label>Is Active</label>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
    </fields>
</CustomObject>