force-app/main/default/objects/ScanRuleConfiguration__mdt/fields/Expression__c.field-meta.xml
<CustomField>
    <fullName>Expression__c</fullName>
    <label>Expression</label>
    <type>TextArea</type>
</CustomField>